--- a/BMPEditor/resource.qrc
+++ b/BMPEditor/resource.qrc
@@ -12,7 +12,8 @@
         <file>Resources/zoom_in.svg</file>
         <file>Resources/zoom_out.svg</file>
         <file>Resources/reset_scale.svg</file>
-        <file>Resources/about_graphics.png</file>
         <file>Resources/icon.png</file>
+        <file>Resources/minimize.svg</file>
+        <file>Resources/maximize.svg</file>
     </qresource>
 </RCC>
