--- a/BMPEditor/mainwindow.ui
+++ b/BMPEditor/mainwindow.ui
@@ -49,6 +49,7 @@
     <addaction name="actionBlur"/>
     <addaction name="actionBrightness"/>
     <addaction name="actionContrast"/>
+    <addaction name="actionColor_balance"/>
    </widget>
    <widget class="QMenu" name="menuTransform">
     <property name="title">
@@ -306,6 +307,11 @@ Flip vertically</string>
   <action name="actionContrast">
    <property name="text">
     <string>Contrast</string>
+   </property>
+  </action>
+  <action name="actionColor_balance">
+   <property name="text">
+    <string>Color balance</string>
    </property>
   </action>
  </widget>
